# tennis_match_csoreboard_v_2

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  wsgi.py
myapp/controllers/: completed_matches_cotroller.py  home_controller.py  match_controller.py  player_controller.py
myapp/database/: session.py
myapp/migrations/: env.py
myapp/migrations/versions/: d2eea0986132_change_score_type_to_string.py  eb785f3f5d99_.py
myapp/models/: base.py  match.py  models.py  player.py
myapp/services/: match_service.py  player_service.py
myapp/services/strategies/: advantage_state_strategy.py  deuce_state_strategy.py  game_state_strategy.py  regular_state_strategy.py  tie_break_state_strategy.py
myapp/static/: styles.css
myapp/templates/: base.html  completed_matches.html  final_score.html  home.html  match_score.html  new_match.html
myapp/views/: home_view.py  match_view.py
src/: exceptions.py  wsgi.py
src/config/: config.py  log_config.py
src/controllers/: base_controller.py  completed_matches_controller.py  completed_matches_cotroller.py  home_controller.py  match_controller.py  player_controller.py
src/database/: session.py
src/migrations/: env.py
src/migrations/versions/: 007951ed382f_.py  1dcfbedefe09_.py  a268ed9a46ea_change_score_type_to_string.py  c820d7865b14_.py  e73d719fbba7_change_score_type_to_string.py
src/models/: base.py  match.py  player.py
src/services/: exceptions.py  match_service.py  player_service.py  score_utils.py  validation.py
src/services/strategies/: advantage_state_strategy.py  deuce_state_strategy.py  game_state_strategy.py  regular_state_strategy.py  tie_break_state_strategy.py
src/static/: styles.css
src/templates/: base.html  completed_matches.html  error.html  match_score.html  new_match.html
src/utils/: request_utils.py
src/views/: base_view.py  completed_matches_view.py  home_view.py  match_view.py  template_name.py
tests/: conftest.py  test_advantage_state_strategy.py  test_deuce_state_strategy.py  test_regular_state_strategy.py  test_tie_break_state_strategy.py
