[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis_score_app"
version = "0.1.0"
authors = [
    { name = "Gichie", email = "kksenys@gmail.com" },
]
description = "A simple tennis score tracking application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gichie/tennis_match_csoreboard_v_2"
"Bug Tracker" = "https://github.com/Gichie/tennis_match_csoreboard_v_2/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]