[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis_score_app"
version = "0.1.0"
authors = [
    { name = "Gichie", email = "kksenys@gmail.com" },
]
description = "A simple tennis score tracking application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic==1.15.0",
    "black==25.1.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "dotenv==0.9.9",
    "greenlet==3.1.1",
    "Jinja2==3.1.5",
    "Mako==1.3.9",
    "MarkupSafe==3.0.2",
    "mypy-extensions==1.0.0",
    "mysqlclient==2.2.7",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "psycopg2-binary==2.9.10",
    "PyMySQL==1.1.1",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.38",
    "typing_extensions==4.12.2",
    "uuid==1.30",
    "waitress==3.0.2",
    "whitenoise==6.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]
dev = [
    "ruff==0.11.0",
    "mypy==1.15.0"
]

[project.urls]
"Homepage" = "https://github.com/Gichie/tennis_match_csoreboard_v_2"
"Bug Tracker" = "https://github.com/Gichie/tennis_match_csoreboard_v_2/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disable_error_code = ["import-untyped", "no-any-return"]
disallow_subclassing_any = false